--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "API Share",
   "main": "src/app.ts",
   "scripts": {
-    "start": "ts-node src/app.ts",
+    "start": "node build/app.js",
     "dev": "ts-node-dev src/app.ts",
     "build": "tsc"
   },
