--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node build/app.js",
     "dev": "ts-node-dev src/app.ts",
-    "build": "tsc && ts-node build.ts",
+    "build": "tsc",
     "build:addon": "node-gyp configure build"
   },
   "repository": {
